# eruption

./: CMakeLists.txt  conanfile.txt
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  lib.cc
